--- a/homelivingproduct/homeproduct.html
+++ b/homelivingproduct/homeproduct.html
@@ -75,7 +75,7 @@
           </div>
             <div class="font">
                 <i class="fa-regular fa-heart"></i>
-                <a href='../wishlist/wishlist'>wishlist</a>
+                <a href='../wishlist/wishlist.html'>wishlist</a>
             </div>
             <div class="font">
                 <i class="fa-solid fa-bag-shopping"></i>
